--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -75,7 +75,7 @@
 				<div class="your-choice">
 					<h5>Bạn đã chọn</h5>
 					<h5><b><%= data.acco.name %></b></h5>
-					<a href="javascript:history.back()"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
+					<a href="javascript:history.back()"><b>Đổi lựa chọn của bạn</b></a>
 				</div>
 
 				<div class="cost-total">
@@ -137,31 +137,31 @@
 								</div>
 								<div class="list-account-padding">
 									<div class="account-item clickable">
-										<img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+										<img src="/imgs/mastercard.png" alt="" />
 
 										<div class="name-bank">
 											<h5>Saccombank</h5>
-											<h5 style="text-align: end"><b>*1108</b></h5>
+											<h5 class="num-bank"><b>*1108</b></h5>
 										</div>
 									</div>
 
 									<div class="account-item clickable">
-										<img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+										<img src="/imgs/mastercard.png" alt="" />
 										<div class="name-bank">
 											<h5>BIDV</h5>
-											<h5 style="text-align: end"><b>*0319</b></h5>
+											<h5 class="num-bank"><b>*0319</b></h5>
 										</div>
 									</div>
 
 									<div class="account-item clickable">
-										<img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+										<img src="/imgs/mastercard.png" alt="" />
 										<div class="name-bank">
 											<h5>Agribank</h5>
-											<h5 style="text-align: end"><b>*1698</b></h5>
+											<h5 class="num-bank"><b>*1698</b></h5>
 										</div>
 									</div>
 
-									<div class="account-item clickable addCreditCardBtn" style="color: #a3adad">
+									<div class="account-item clickable addCreditCardBtn add-acount">
 										<span class="material-symbols-outlined">add_card</span>
 										<h5 class="">Thêm thẻ tín dụng mới</h5>
 									</div>
@@ -188,11 +188,11 @@
 										<img src="/imgs/vietcombank.png" alt="" />
 										<div class="name-bank">
 											<h5>Vietcombank</h5>
-											<h5 style="text-align: end"><b>*1108</b></h5>
+											<h5 class="num-bank"><b>*1108</b></h5>
 										</div>
 									</div>
 
-									<div class="account-item clickable addBankAccountBtn" style="color: #a3adad">
+									<div class="account-item clickable addBankAccountBtn add-acount">
 										<span class="material-symbols-outlined"> add_card </span>
 										<h5 class="">Thêm tài khoản ngân hàng liên kết</h5>
 									</div>
