--- a/src/public/styles/pages/booking/information.css
+++ b/src/public/styles/pages/booking/information.css
@@ -1,5 +1,5 @@
-@import url('/styles/base.css');
-@import url('/styles/partials/header-small.css');
+@import url("/styles/base.css");
+@import url("/styles/partials/header-small.css");
 
 .payment--container {
     width: 80%;
@@ -75,6 +75,10 @@ h1 {
     height: auto;
 }
 
+.your-booking-detail > h1 {
+    margin: 12px 12px 0 12px;
+}
+
 .check-date,
 .method-choice,
 .list-account-title {
@@ -126,6 +130,10 @@ h1 {
     flex-direction: column;
     gap: 4px;
     padding: 0 12px 12px 12px;
+}
+
+.your-choice > a b {
+    color: #0866ff;
 }
 
 .cost {
@@ -321,11 +329,35 @@ button.submit-booking {
     border: 1px solid #bec8c9;
 }
 
+.info-bill > span {
+    height: 48px;
+    padding: 12px;
+    gap: 4px;
+    border-radius: 12px;
+    border: 1px solid #ccc;
+    background-color: aliceblue;
+    display: flex;
+    align-items: center;
+}
+
+.info-bill .note-text span {
+    color: red;
+}
+form {
+    gap: 12px;
+    display: flex;
+    flex-direction: column;
+}
 .form--item {
     display: flex;
     flex-direction: column;
     /* align-items: center; */
     gap: 12px;
+}
+
+.info-bill--form-item {
+    flex-direction: row;
+    gap: 0px;
 }
 
 .special-request {
@@ -376,4 +408,20 @@ h4.required::after {
     border: 1px solid #bec8c9;
     border-radius: 8px;
     padding: 12px;
+}
+
+.starts-icon span .star {
+    font-variation-settings: "FILL" 1;
+}
+
+.starts-icon span .grade {
+    font-variation-settings: "FILL" 0;
+}
+
+.green {
+    color: #119726;
+}
+
+.green > span {
+    display: block;
 }
