Update link in booking/information+payment

--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 					<h5><b><%= data.acco.name %></b></h5>
-					<a href=""><%= data.acco.exac_location %></a>
+					<a href="<%= data.acco.location_link %>"><%= data.acco.exac_location %></a>
 				</div>
 
 				<div class="your-booking-detail">
