Fix phone in information

--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -141,7 +141,7 @@
 
 						<div class="form--item">
 							<h4 class="required">Điện thoại cá nhân</h4>
-							<input class="form-control" type="number" name="phone" placeholder="Nhập số điện thoại vào đây" required>
+							<input class="form-control" type="text" name="phone" placeholder="Nhập số điện thoại vào đây" required>
 							<span class="note-text">Cần thiết để xác nhận đặt phòng của bạn.</h5>
 						</div>
 					</div>
