--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -255,7 +255,9 @@
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<!-- <script src="/scripts/components/otp.js"></script> -->
+	<script src="/scripts/components/otp.js"></script>
+	<script src="/scripts/booking/payment.js"></script>
+
 
 </body>
 
